--- a/style.css
+++ b/style.css
@@ -1,48 +1,80 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    overflow-x: hidden;
-    position: relative;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .hamburger {
-    margin-top: 10px;
-    margin-right: 30px;
-    cursor: pointer;
-    position: absolute;
-    top: 5px;
-    right: 5px;
+  margin-top: 10px;
+  margin-right: 30px;
+  cursor: pointer;
+  position: absolute;
+  top: 5px;
+  right: 5px;
 }
 
 .row {
-    margin: 5px;
-    width: 20px;
-    height: 2px;
-    background-color: black;
+  margin: 5px;
+  width: 20px;
+  height: 2px;
+  background-color: black;
 }
 
 li {
-    list-style: none;
-    margin-top: 5px;
-    color: #fff;
+  list-style: none;
+  margin-top: 5px;
+  color: #fff;
+  padding: 0 10px;
 }
 
 .hamburger-menu {
-    position: absolute;
-    top: 0;
-    right: -181px;
-    background-color: gray;
-    padding: 20px 50px;
-    transition: all .5s 0s ease;
+  position: absolute;
+  top: 0;
+  right: -200px;
+  background-color: gray;
+  padding: 20px 50px;
+  transition: all 0.5s 0s ease;
+  display: flex;
+  flex-direction: column;
 }
 
 .show {
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: gray;
-    padding: 20px 50px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: gray;
+  padding: 20px 50px;
+}
+
+.close {
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.square_btn {
+  display: block;
+  position: relative;
+}
+
+.square_btn::before,
+.square_btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px; /* 棒の幅（太さ） */
+  height: 20px; /* 棒の高さ */
+  background: #fff; /* バツ印の色 */
+}
+
+.square_btn::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.square_btn::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
